manifests/dev/resources.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
    name: gesturerecognition
    labels:
      app: gesturerecognition
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gesturerecognition
  template:
    metadata:
      labels:
        app: gesturerecognition
    spec:
      containers:
        - image: mansong/gesturerecognition:latest
          name: gesturerecognition
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 1
              memory: 8Gi
            requests:
              cpu: 500m
              memory: 4Gi
          #volumeMounts:
            # - mountPath: /etc/nginx/conf.d
            #   name: nginx-conf
            #   readOnly: true
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 80
            # initialDelaySeconds: 30
            # timeoutSeconds: 5
            # periodSeconds: 10
---

apiVersion: v1
kind: Service
metadata:
    name: gesturerecognition-svc
spec:
  type: LoadBalancer
  selector: 
    app: gesturerecognition
  ports:
    - protocol: TCP
      port: 443
      targetPort: 3000
